--- a/portfolio/templates/generator/home.html
+++ b/portfolio/templates/generator/home.html
@@ -5,83 +5,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Web Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #e6f7ff;
-            color: #333;
-            margin: 0;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            box-sizing: border-box;
-        }
-
-        h1 {
-            color: #006d77;
-            font-size: 2em;
-            margin-bottom: 10px;
-            text-align: center;
-        }
-
-        p {
-            font-size: 1.2em;
-            color: #333;
-            text-align: center;
-            max-width: 90%;
-        }
-
-        b {
-            color: #0077b6;
-        }
-
-        .project-container {
-            max-width: 600px;
-            width: 100%;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 10px 0;
-        }
-
-        @media (max-width: 600px) {
-            h1 {
-                font-size: 1.5em;
-            }
-
-            p {
-                font-size: 1em;
-            }
-        }
-    </style>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
-    <div class="project-container">
-        <h1>HEY THERE!!!!</h1>
-        <p>Welcome to <b>My Portfolio</b></p>
+<body class="bg-light text-center py-5">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <h1 class="text-primary mb-3">HEY THERE!!!!</h1>
+                <p class="lead text-secondary">Welcome to <b class="text-info">My Portfolio</b></p>
+                <h2 class="text-dark mt-4"><b>Projects:</b></h2>
+                <!-- Static Image -->
+                {% load static %}
+                <img src="{% static 'portfolio/champ.jpg' %}" class="img-fluid rounded my-3" alt="Portfolio Image">
+                <a href="{% static 'portfolio/uefa_champions_league_2024-25_league_phase_draw_results_calendar_by_date_20240831133635.pdf' %}"
+                    class="img-fluid rounded my-3" alt="Portfolio Image">2024/25 UEFA CHAMPIONS LEAGUE
+                    LEAGUE PHASE</a>
 
-        <h1><b>Projects:</b></h1>
-
-        <div>
-            {% for project in projects %}
-            <h2><b>TITLE</b></h2>
-            <h3>{{ project.title }}</h3>
-            <h2><b>DESCRIPTION </b></h2>
-            <h3>{{ project.description }}</h3>
-            <h2><b>IMAGE</b></h2>
-            <img src="{{ project.image.url }}" alt="Project Image">
-            {% endfor %}
-            <h2><b>LINK</b></h2>
-            <h3><a href="{{ project.url }}">IR A LA WEB DE IES SANCLEMENTE</a></h3>
+                <div class="mt-4">
+                    {% for project in projects %}
+                    <div class="card my-3">
+                        <div class="card-body">
+                            <h3 class="card-title text-success"><b>{{ project.title }}</b></h3>
+                            <p class="card-text"><b>Description:</b> {{ project.description }}</p>
+                            <img src="{{ project.image.url }}" class="img-fluid rounded my-2" alt="Project Image">
+                            <a href="{{ project.url }}" class="btn btn-primary mt-2">Visit Project</a>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
     </div>
+
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
