--- a/portfolio/templates/generator/home.html
+++ b/portfolio/templates/generator/home.html
@@ -1,46 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'generator/base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple Web Page</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
+{% block content %}
+<div class="container">
 
-<body class="bg-light text-center py-5">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <h1 class="text-primary mb-3">HEY THERE!!!!</h1>
-                <p class="lead text-secondary">Welcome to <b class="text-info">My Portfolio</b></p>
-                <h2 class="text-dark mt-4"><b>Projects:</b></h2>
-                <!-- Static Image -->
-                {% load static %}
-                <img src="{% static 'portfolio/champ.jpg' %}" class="img-fluid rounded my-3" alt="Portfolio Image">
-                <a href="{% static 'portfolio/uefa_champions_league_2024-25_league_phase_draw_results_calendar_by_date_20240831133635.pdf' %}"
-                    class="img-fluid rounded my-3" alt="Portfolio Image">2024/25 UEFA CHAMPIONS LEAGUE
-                    LEAGUE PHASE</a>
+    <!-- Page Content -->
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <h1 class="text-primary mb-3">HEY THERE!!!!</h1>
+            <p class="lead text-secondary">Welcome to <b class="text-info">My Portfolio</b></p>
+            <h2 class="text-dark mt-4"><b>Projects:</b></h2>
 
-                <div class="mt-4">
-                    {% for project in projects %}
-                    <div class="card my-3">
-                        <div class="card-body">
-                            <h3 class="card-title text-success"><b>{{ project.title }}</b></h3>
-                            <p class="card-text"><b>Description:</b> {{ project.description }}</p>
-                            <img src="{{ project.image.url }}" class="img-fluid rounded my-2" alt="Project Image">
-                            <a href="{{ project.url }}" class="btn btn-primary mt-2">Visit Project</a>
-                        </div>
+            <!-- Static Image -->
+            {% load static %}
+            <img src="{% static 'portfolio/champ.jpg' %}" class="img-fluid rounded my-3" alt="Portfolio Image">
+            <a href="{% static 'portfolio/uefa_champions_league_2024-25_league_phase_draw_results_calendar_by_date_20240831133635.pdf' %}"
+                class="d-block text-decoration-none text-primary mb-4">2024/25 UEFA CHAMPIONS LEAGUE
+                LEAGUE PHASE</a>
+
+            <!-- Blog Link -->
+            <div class="my-4">
+                <a href="{% url 'blog:all_blogs' %}" class="btn btn-success btn-lg">
+                    Visit My Blog
+                </a>
+            </div>
+
+            <!-- Projects -->
+            <div class="mt-4">
+                {% for project in projects %}
+                <div class="card my-3 shadow-sm">
+                    <div class="card-body">
+                        <h3 class="card-title text-success"><b>{{ project.title }}</b></h3>
+                        <p class="card-text"><b>Description:</b> {{ project.description }}</p>
+                        <img src="{{ project.image.url }}" class="img-fluid rounded my-2" alt="Project Image">
+                        <a href="{{ project.url }}" class="btn btn-primary mt-2">Visit Project</a>
                     </div>
-                    {% endfor %}
                 </div>
+                {% endfor %}
             </div>
         </div>
     </div>
-
-    <!-- Bootstrap JS Bundle -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-
-</html>
+</div>
+{% endblock %}
