--- a/portfolio/templates/generator/home.html
+++ b/portfolio/templates/generator/home.html
@@ -1,43 +1,40 @@
-{% extends 'generator/base.html' %}
+{% extends "generator/base.html" %}
+
+{% load static %}
 
 {% block content %}
-<div class="container">
 
-    <!-- Page Content -->
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-            <h1 class="text-primary mb-3">HEY THERE!!!!</h1>
-            <p class="lead text-secondary">Welcome to <b class="text-info">My Portfolio</b></p>
-            <h2 class="text-dark mt-4"><b>Projects:</b></h2>
-
-            <!-- Static Image -->
-            {% load static %}
-            <img src="{% static 'portfolio/champ.jpg' %}" class="img-fluid rounded my-3" alt="Portfolio Image">
-            <a href="{% static 'portfolio/uefa_champions_league_2024-25_league_phase_draw_results_calendar_by_date_20240831133635.pdf' %}"
-                class="d-block text-decoration-none text-primary mb-4">2024/25 UEFA CHAMPIONS LEAGUE
-                LEAGUE PHASE</a>
-
-            <!-- Blog Link -->
-            <div class="my-4">
-                <a href="{% url 'blog:all_blogs' %}" class="btn btn-success btn-lg">
-                    Visit My Blog
-                </a>
-            </div>
-
-            <!-- Projects -->
-            <div class="mt-4">
-                {% for project in projects %}
-                <div class="card my-3 shadow-sm">
-                    <div class="card-body">
-                        <h3 class="card-title text-success"><b>{{ project.title }}</b></h3>
-                        <p class="card-text"><b>Description:</b> {{ project.description }}</p>
-                        <img src="{{ project.image.url }}" class="img-fluid rounded my-2" alt="Project Image">
-                        <a href="{{ project.url }}" class="btn btn-primary mt-2">Visit Project</a>
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
-        </div>
-    </div>
+<div class="row justify-content-center my-3">
+  <div class="col-5">
+    <img src="{% static 'portfolio/champ.jpg' %}" class="img-fluid">
+  </div>
 </div>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-9 text-center">
+    <h1 id="hometext" class="font-weight-bold">My Personal Portfolio</h1>
+  </div>
+</div>
+
+<h2 class="mt-5">Portfolio</h2>
+<hr>
+<div class="row">
+  {% for project in projects %}
+  <div class="col-lg-4 col-md-6">
+
+    {% if project.url %}
+    <a href="{{ project.url }}">
+      <img src="{{ project.image.url }}" class="img-fluid mb-2">
+    </a>
+    {% else %}
+
+    <img src="{{ project.image.url }}" class="img-fluid mb-2">
+    {% endif %}
+    <h3>{{ project.title }}</h3>
+    <p>{{ project.description }}</p>
+
+  </div>
+  {% endfor %}
+</div>
+
 {% endblock %}
