--- a/blog/templates/blog/all_blogs.html
+++ b/blog/templates/blog/all_blogs.html
@@ -1,73 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'generator/base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Blog</title>
-
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #e6f7ff;
-            color: #333;
-        }
-
-        .blog-title {
-            color: #006d77;
-        }
-
-        .blog-date {
-            font-size: 0.9em;
-            color: #666;
-        }
-
-        .blog-post {
-            border: 1px solid #ccc;
-            padding: 20px;
-            border-radius: 10px;
-            margin-bottom: 20px;
-            background-color: #ffffff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .blog-description {
-            background-color: #ffffff;
-            padding: 20px;
-            max-width: 100%;
-            word-wrap: break-word;
-            overflow-wrap: break-word;
-            margin: 0 auto;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="container my-5">
-        <div class="text-center">
-            <h1 class="blog-title display-4">MY BLOG!!!!</h1>
-            <p class="lead">Welcome to <b>My BLOG</b></p>
-            <h3 class="blog-title">This page has <b>{{ blogs.count }} blog{{ blogs.count|pluralize }}</b>.</h3>
-        </div>
-
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                {% for blog in blogs %}
-                <div class="blog-post my-4">
-                    <h2 class="text-primary">{{ blog.title }}</h2>
-                    <p class="blog-date">Published on: <b>{{ blog.date|date:'M d Y'|upper }}</b></p>
-                    <p class="blog-description">{{ blog.description|striptags|truncatechars:100 }}</p>
-                    <a href="{% url 'blog:detail' blog.id %}">Leer más</a>
-                </div>
-                {% endfor %}
-            </div>
-        </div>
-
+{% block content %}
+<div class="container my-5">
+    <div class="text-center">
+        <h1 class="blog-title display-4">MY BLOG!!!!</h1>
+        <p class="lead">Welcome to <b>My BLOG</b></p>
+        <h3 class="blog-title">This page has <b>{{ blogs.count }} blog{{ blogs.count|pluralize }}</b>.</h3>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-
-</html>
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            {% for blog in blogs %}
+            <div class="blog-post my-4">
+                <h2 class="text-primary">{{ blog.title }}</h2>
+                <p class="blog-date">Published on: <b>{{ blog.date|date:'M d Y'|upper }}</b></p>
+                <p class="blog-description mt-4 p-4 rounded shadow-sm bg-white"
+                    style="word-wrap: break-word; word-break: break-word; overflow-wrap: break-word; white-space: pre-wrap;">
+                    {{ blog.description|striptags|truncatechars:200 }}</p>
+                <a href="{% url 'blog:detail' blog.id %}" class="btn btn-link">Read more</a>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+{% endblock %}
