--- a/portfolio/static/portfolio/custom.css
+++ b/portfolio/static/portfolio/custom.css
@@ -1,24 +1,39 @@
 .navbar-nav .nav-link {
-    color: rgba(0,0,0,1) !important;
+  color: rgba(0, 0, 0, 1) !important;
 }
 
 .navbar-nav .nav-link:hover {
-    color: rgba(0,0,0,.5) !important;
+  color: rgba(0, 0, 0, 0.5) !important;
 }
 
 body {
-    font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 #blogtitle {
-    font-size: 6rem;
+  font-size: 6rem;
 }
 
 @media (min-width: 992px) {
-    #hometext {
-        font-size: 4rem;
-    }
-    #blogdetailtitle {
-        font-size: 5rem;
-    }
+  #hometext {
+    font-size: 4rem;
+  }
+  #blogdetailtitle {
+    font-size: 5rem;
+  }
+}
+
+.blog-description {
+  word-wrap: break-word;
+  word-break: break-word;
+  overflow-wrap: break-word;
+  white-space: pre-wrap;
+}
+
+.standard-image {
+  width: 100%; /* O el tamaño que desees */
+  height: 200px; /* Fija la altura */
+  object-fit: cover; /* Asegura que la imagen mantenga su proporción y llene el espacio */
+  border-radius: 8px; /* Opcional: bordes redondeados */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Opcional: sombra para estética */
 }
