--- a/portfolio/templates/generator/base.html
+++ b/portfolio/templates/generator/base.html
@@ -27,11 +27,11 @@
 
   <!-- Navbar -->
   <nav id="topNav" class="navbar navbar-expand-md navbar-light">
-    <div class="container">
+    <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'home' %}">
-        <img src="{% static 'portfolio/Logo.png' %}" width="30" height="30" class="d-inline-block align-top"
+        <img src="{% static 'portfolio/Logo2.png' %}" width="30" height="30" class="d-inline-block align-top"
           alt="Nick's Logo">
-        <span>Nick Walter</span>
+        <span>Adrián Barros</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +40,7 @@
       <div class="collapse navbar-collapse text-center" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{% static 'portfolio/resume.pdf' %}">Resume</a>
+            <a class="nav-link" href="{% static 'portfolio/uefa.pdf' %}">Game schedules</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://www.linkedin.com/in/nick-walter/" target="_blank">LinkedIn</a>
