--- a/portfolio/templates/generator/home.html
+++ b/portfolio/templates/generator/home.html
@@ -6,13 +6,30 @@
 
 <div class="row justify-content-center my-3">
   <div class="col-5">
-    <img src="{% static 'portfolio/champ.jpg' %}" class="img-fluid">
+    <div style="
+      width: 100%;
+      height: 0;
+      padding-bottom: 56.25%; /* Relación de aspecto 16:9 */
+      position: relative;
+      overflow: hidden;
+      border-radius: 8px; /* Bordes redondeados */
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Sombra */
+    ">
+      <img src="{% static 'portfolio/champ.jpg' %}" style="
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Ajusta la imagen al contenedor */
+      ">
+    </div>
   </div>
 </div>
 
 <div class="row justify-content-center mb-3">
   <div class="col-md-9 text-center">
-    <h1 id="hometext" class="font-weight-bold">My Personal Portfolio</h1>
+    <h1 id="hometext" class="font-weight-bold">UEFA CHAMPIONS LEAGUE</h1>
   </div>
 </div>
 
@@ -21,18 +38,39 @@
 <div class="row">
   {% for project in projects %}
   <div class="col-lg-4 col-md-6">
-
-    {% if project.url %}
-    <a href="{{ project.url }}">
-      <img src="{{ project.image.url }}" class="img-fluid mb-2">
-    </a>
-    {% else %}
-
-    <img src="{{ project.image.url }}" class="img-fluid mb-2">
-    {% endif %}
+    <div style="
+      width: 100%;
+      height: 0;
+      padding-bottom: 56.25%; /* Relación de aspecto 16:9 */
+      position: relative;
+      overflow: hidden;
+      border-radius: 8px; /* Bordes redondeados */
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Sombra */
+    ">
+      {% if project.url %}
+      <a href="{{ project.url }}">
+        <img src="{{ project.image.url }}" style="
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover; /* Ajusta la imagen al contenedor */
+        ">
+      </a>
+      {% else %}
+      <img src="{{ project.image.url }}" style="
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Ajusta la imagen al contenedor */
+      ">
+      {% endif %}
+    </div>
     <h3>{{ project.title }}</h3>
     <p>{{ project.description }}</p>
-
   </div>
   {% endfor %}
 </div>
