--- a/portfolio/templates/generator/home.html
+++ b/portfolio/templates/generator/home.html
@@ -29,7 +29,7 @@
 
 <div class="row justify-content-center mb-3">
   <div class="col-md-9 text-center">
-    <h1 id="hometext" class="font-weight-bold">UEFA CHAMPIONS LEAGUE</h1>
+    <h1 id="hometext" class="font-weight-bold">UEFA CHAMPIONS LEAGUE ⚽</h1>
   </div>
 </div>
 
